added a div to index

--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
         <p class="mb-0">© 2024 Young Codebits. Designed by Tim.</p>
       </div>
     </div>
+    <div></div>
   </footer>
   
   
